// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appMemberEmailChange should render appMemberEmailChange 0: html 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello User,</p>
<p>You have changed your email address for Example App. Before you can use your account, we need to
verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards,</p>
<p><em>Example App</em></p>
</body>
</html>
"
`;

exports[`appMemberEmailChange should render appMemberEmailChange 0: text 1`] = `
"Hello User,

You have changed your email address for Example App. Before you can use your account, we need to
verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards,

_Example App_
"
`;

exports[`appMemberEmailChange should render appMemberEmailChange 1: html 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello,</p>
<p>You have changed your email address for Example App. Before you can use your account, we need to
verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards,</p>
<p><em>Example App</em></p>
</body>
</html>
"
`;

exports[`appMemberEmailChange should render appMemberEmailChange 1: text 1`] = `
"Hello,

You have changed your email address for Example App. Before you can use your account, we need to
verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards,

_Example App_
"
`;

exports[`emailAdded should render emailAdded 0: html 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello User,</p>
<p>You have registered a new email address to your account. In order to make full use of this email, we
need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email,
nothing will be done with this email address.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
"
`;

exports[`emailAdded should render emailAdded 0: text 1`] = `
"Hello User,

You have registered a new email address to your account. In order to make full use of this email, we
need to verify your email address.

Please click [this link](https://example.com) to verify your email address.

**Didn’t request this email?**

No worries! Your address may have been entered by mistake. If you ignore or delete this email,
nothing will be done with this email address.

Kind regards,

_The Appsemble Team_
"
`;

exports[`emailAdded should render emailAdded 1: html 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello,</p>
<p>You have registered a new email address to your account. In order to make full use of this email, we
need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email,
nothing will be done with this email address.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
"
`;

exports[`emailAdded should render emailAdded 1: text 1`] = `
"Hello,

You have registered a new email address to your account. In order to make full use of this email, we
need to verify your email address.

Please click [this link](https://example.com) to verify your email address